--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-prod": "REACT_APP_ENV=production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build-prod-window": "REACT_APP_ENV=production&react-scripts build"
